# NepBill

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Compile.bat  README.md  main.cpp
NepBill/: CMakeLists.txt  Main.cpp
NepBill/Shared/: CMakeLists.txt  CurrencyConverter.h  Maths.h  NepaliDateConverter.cpp  NepaliDateConverter.h  Tables.cpp  Tables.h  UI.cpp  UUID.cpp  UUID.h  bs_month_days_table.h
NepBill/Src/: Data.h  Functions.cpp  NepBill.cpp  NepBill.h  Query.h  Tables.cpp  Tables.h  UI.cpp  UI.h  UUID.h  Window.cpp  Window.h
